Bug 456726 - kpackagetool5 --list-types flawed output + Invalid metadata for package structure
Summary: kpackagetool5 --list-types flawed output + Invalid metadata for package struc...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kpackage
Classification: Frameworks and Libraries
Component: default (show other bugs)
Version: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-14 18:28 UTC by witchhunter
Modified: 2022-07-25 13:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description witchhunter 2022-07-14 18:28:30 UTC
SUMMARY
***
This command provides the following output:
$ kpackagetool5 --list-types

Package types that are installable with this tool:
Built in:
Addon Name           Service Type         Path                  
-------------------  -------------------  --------------------  
KPackage/Generic     KPackage/Generic     kpackage/packages/
KPackage/GenericQML  KPackage/GenericQML  kpackage/genericqml/

Provided by plugins:
kf.package: Invalid metadata for package structure "plasma_containmentactions"
kf.package: Invalid metadata for package structure "plasma_dataengine"
kf.package: Invalid metadata for package structure "plasma_lookandfeel"
kf.package: Invalid metadata for package structure "kwin_aurorae"
kf.package: Invalid metadata for package structure "plasma_wallpaper"
kf.package: Invalid metadata for package structure "plasma_theme"
kf.package: Invalid metadata for package structure "plasma_layouttemplate"
kf.package: Invalid metadata for package structure "plasma_generic"
kf.package: Invalid metadata for package structure "wallpaper_images"
kf.package: Invalid metadata for package structure "kwin_script"
kf.package: Invalid metadata for package structure "kwin_windowswitcher"
kf.package: Invalid metadata for package structure "plasma_applet"
kf.package: Invalid metadata for package structure "plasma_shell"
kf.package: Invalid metadata for package structure "kwin_effect"
kf.package: Invalid metadata for package structure "kwin_decoration"
kf.package: Invalid metadata for package structure "plasma_comic"
Addon Name                          Service Type               Path                    
----------------------------------  -------------------------  ----------------------  
                                    plasma_comic               
     Containment Actions                 plasma_containmentactions  
Face for the KSysguard Sensor Face  KSysguard/SensorFace       ksysguard/sensorfaces/
KWin Aurorae                        kwin_aurorae               
         KWin Decoration                     kwin_decoration            
             KWin Effect                         kwin_effect                
             KWin Script                         kwin_script                
    KWin Window Switcher                kwin_windowswitcher
        
        
        
        
For the record, I have found the propper output provided by Chris Holland 5 years ago:
Source https://www.reddit.com/r/kde/comments/61m10e/what_is_the_difference_between_plasmapkg/

$ kpackagetool5 --list-types
Package types that are installable with this tool:
Built in:
Addon Name           Service Type         Path                   
-------------------  -------------------  ---------------------  
KPackage/Generic     KPackage/Generic     kpackage/packages/
KPackage/GenericQML  KPackage/GenericQML  kpackage/packagesqml/

Provided by plugins:
Addon Name            Service Type               Path                        
--------------------  -------------------------  --------------------------  
Comic                 Plasma/Comic               plasma/comics/
Containment Actions   Plasma/ContainmentActions  plasma/containmentactions/
Data Engine           Plasma/DataEngine          plasma/dataengines/
  Generic               Plasma/Generic             plasma/packages/
 KWin Script           KWin/Script                kwin/scripts/
KWin Window Switcher  KWin/WindowSwitcher        kwin/tabbox/
 Layout Template       Plasma/LayoutTemplate      plasma/layout-templates/
Look and Feel         Plasma/LookAndFeel         plasma/look-and-feel/
Plasma Shell          Plasma/Shell               plasma/shells/
  Plasma Theme          Plasma/Theme               plasma/desktoptheme/
Plasmoid              Plasma/Applet              plasma/plasmoids/
  Wallpaper             Plasma/Wallpaper           plasma/wallpapers/
Wallpaper Images      Wallpaper/Images 


Following faulty output, this command throws an error:
$ kpackagetool5 --list --type kwin_script
kf.package: Invalid metadata for package structure "kwin_script"
Package type "kwin_script" not found
Listing service types: kwin_script in /home/v/.local/share/

Finally, this command is successful
$ kpackagetool5 --list --type KWin/Script

***



SOFTWARE/OS VERSIONS

Operating System: KDE neon Testing Edition VM
KDE Plasma Version: 5.25.3
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kernel Version: 5.15.0-41-generic (64-bit)
Graphics Platform: X11
+
Operating System: Manjaro Linux
KDE Plasma Version: 5.24.6
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Kernel Version: 5.18.10-1-MANJARO (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2022-07-16 08:27:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kpackage/-/merge_requests/50
Comment 2 Marco Martin 2022-07-25 13:51:43 UTC
Git commit 74bf92c1933d4cdbea26e602ccc5cd30b2ad675f by Marco Martin, on behalf of Alexander Lohnau.
Committed on 25/07/2022 at 07:39.
Pushed by alex into branch 'master'.

Fix listing of KPackage structures

- Display the KPackageType instead of name. This is the user-visible identifier developers should work with.
- Do not display plugin id, this is nowhere used in the KPackage API and thus internal

M  +19   -28   src/kpackagetool/kpackagetool.cpp

https://invent.kde.org/frameworks/kpackage/commit/74bf92c1933d4cdbea26e602ccc5cd30b2ad675f