Fix listing of KPackage structures

- Display the KPackageType instead of name. This is the user-visible identifier developers should work with.
- Do not display plugin id, this is nowhere used in the KPackage API and thus internal

BUG: 456726